Fixed heading alignment

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,8 @@ h1 {
     line-height: 1.6rem;
     font-weight: bold;
     letter-spacing: -1px;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .image-container {
